updating package json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assignment3.1",
+  "name": "3d_solar_spin_showcase",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
